@@ -1,3 +1,7 @@
+2004-06-29    <bilboed@localhost>
+
+	* src/pitivi-projectsettings.c (pitivi_projectsettings_media_new): removed bad codec_settings list initialisation
+
 2004-06-28    <bilboed@localhost>
 
 	* src/pitivi-settings.c (pitivi_settings_ajout_factory_element): modification to support priority elements (after loading from file)
